creusot/tests/should_fail/prusti/blocked_lifetime/trait.stderr
error[creusot]: invalid mut dereference of zombie expression with lifetime `'x` in state `'post`
 --> trait.rs:6:16
  |
6 |     #[ensures(*x == 5u32)]
  |                ^

error: aborting due to previous error

